force-app/main/default/objects/Opportunity/fields/Sample__c.field-meta.xml
<CustomField>
    <fullName>Sample__c</fullName>
    <description>サンプル項目</description>
    <label>Sample</label>
    <length>100</length>
    <type>Text</type>
</CustomField>