force-app/main/default/objects/Opportunity/fields/SampleURL__c.field-meta.xml
<CustomField>
    <fullName>SampleURL__c</fullName>
    <label>SampleURL</label>
    <type>Url</type>
</CustomField>