force-app/main/default/objects/Opportunity/fields/TestURL__c.field-meta.xml
<CustomField>
    <fullName>TestURL__c</fullName>
    <label>テスト外部URL</label>
    <type>Url</type>
</CustomField>